# mnist-idx-handler

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
data/: file_struct.md
executables/: CMakeLists.txt  main.cpp
mlcpp/: CMakeLists.txt
mlcpp/mnist_etl/: CMakeLists.txt  datahandler.hpp  helper_typetraits.hpp
